# SeqBench

./: .gitignore  README.md  compressors_setup.sh  environment.yaml  field_size.json  job_dependencies.json  main.py
Analysis_Scripts/: F1_score_Vs_Ratio.py  csv_merger.py  fastq_lines.count.py  fastq_trimmer.py  float_checker.py  identical_checker.py  job_killer.py  quality_scores_checker.py  size_checker.py
Compression_Scripts/: CMakeLists.txt  command_generator.py  compressor_paths.py  dependency_linker.py  fastq_processor.cpp  fastq_processor.h  fastq_processor_bindings.cpp  fastq_processor_bindings.h  fastq_processor_splitter.py  fastq_reconstructor.cpp  fastq_reconstructor.h  fastq_reconstructor_bindings.cpp  fastq_reconstructor_bindings.h  job_generator.py  path_generator.py
Error_Analysis_Scripts/: CMakeLists.txt  error_analysis.py  fastq_metrics.cpp  fastq_metrics.h  fastq_metrics_binding.cpp  fastq_metrics_bindings.h  test_fastq_metrics.py
Jobs/: sample.json
Post_Hoc_Scripts/: post_hoc_analysis.py  tool_paths.py
Sample/: ERR1044277_1_Sample.fastq  ERR1044277_2_Sample.fastq
Scripts_Template/: compression.sh  error_analysis.sh  fastq_reconstruct.sh  fastq_split.sh  post_hoc.sh  truth_vcf.sh
